--- a/attention_is_all_you_need.ipynb
+++ b/attention_is_all_you_need.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKFZoAsnuYi5g1cUlDUIox",
+      "authorship_tag": "ABX9TyP7CvAaKOSobCZtVM9Wy54l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,9 +52,88 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# what does the architecture look like?\n",
+        "\n",
+        "# How has Pytorch changed in the last little while?\n",
+        "\n",
+        "# What do I need for all of this?\n",
+        "# 1. Training data\n",
+        "# 2. Model\n",
+        "# 3. Training loop\n",
+        "\n",
+        "# This will likely be done in a few separate phases\n",
+        "# 1. Build and validate the model architecture\n",
+        "        # training data?\n",
+        "# 2. Set up training/snapshotting system in GCP\n"
+      ],
       "metadata": {
         "id": "t6UGh4EIro9O"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import the shit\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torch.utils.data\n",
+        "import torchvision\n",
+        "import torchvision.transforms\n",
+        "\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n"
+      ],
+      "metadata": {
+        "id": "h_zJk3Ontz9e"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get the data?\n"
+      ],
+      "metadata": {
+        "id": "Wq8CbpShueoH"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define the model\n",
+        "class BasicNet(nn.Module):\n",
+        "    def __init__(self, input_size, hidden_size, num_classes):\n",
+        "        super(CustomNet, self).__init__()\n",
+        "        # Define the first fully connected layer\n",
+        "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+        "        # Define the second fully connected layer\n",
+        "        self.fc2 = nn.Linear(hidden_size, num_classes)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Apply a ReLU non-linearity to the first layer's output\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        # The output layer with no non-linearity for classification\n",
+        "        x = self.fc2(x)\n",
+        "        return x\n"
+      ],
+      "metadata": {
+        "id": "FMab9ODTvWl3"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kD5XyaSNvYJA"
       },
       "execution_count": null,
       "outputs": []
