Skeleton of encoder network

--- a/attention_is_all_you_need.ipynb
+++ b/attention_is_all_you_need.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7CvAaKOSobCZtVM9Wy54l",
+      "authorship_tag": "ABX9TyP8FEtw6SasPDlziu+J60rk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,9 +108,44 @@
       "cell_type": "code",
       "source": [
         "# define the model\n",
-        "class BasicNet(nn.Module):\n",
+        "class Encoder(nn.Module):\n",
+        "    def __init__(self, dmodel):\n",
+        "        super(Encoder, self).__init__()\n",
+        "        # Define the attention layer\n",
+        "        self.mhAtt = nn.MultiheadAttention(dmodel, 8)\n",
+        "        # Define the feed forward network layers\n",
+        "        self.fc1 = nn.Linear(dmodel, dmodel)\n",
+        "        self.fc2 = nn.Linear(dmodel, dmodel)\n",
+        "        self.dropout = nn.Dropout(0.1)\n",
+        "        self.relu = nn.ReLU(inplace=True) # inplace = True to save memory\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # todo: do I need to call softmax on mhAtt? (or is it already included in the operation?)\n",
+        "        out = self.mhAtt(x)\n",
+        "        out = self.dropout(out)\n",
+        "        out += x # residual connection\n",
+        "        # todo: normalize\n",
+        "        out2 = self.fc1(out)\n",
+        "        out2 = self.relu(out2)\n",
+        "        out2 = self.fc2(out2)\n",
+        "        out2 = self.dropout(out2)\n",
+        "        out2 += out # residual connection\n",
+        "        # todo: normalize\n",
+        "\n",
+        "        return out2\n"
+      ],
+      "metadata": {
+        "id": "FMab9ODTvWl3"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TransformerNet(nn.Module):\n",
         "    def __init__(self, input_size, hidden_size, num_classes):\n",
-        "        super(CustomNet, self).__init__()\n",
+        "        super(TransformerNet, self).__init__()\n",
         "        # Define the first fully connected layer\n",
         "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
         "        # Define the second fully connected layer\n",
@@ -123,15 +158,6 @@
         "        x = self.fc2(x)\n",
         "        return x\n"
       ],
-      "metadata": {
-        "id": "FMab9ODTvWl3"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
       "metadata": {
         "id": "kD5XyaSNvYJA"
       },
