Feedforward and multihead attention blocks

--- a/attention_is_all_you_need.ipynb
+++ b/attention_is_all_you_need.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8FEtw6SasPDlziu+J60rk",
+      "authorship_tag": "ABX9TyMItKTlIWZgURrBHmH4jRxd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "t6UGh4EIro9O"
       },
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "h_zJk3Ontz9e"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -101,18 +101,16 @@
       "metadata": {
         "id": "Wq8CbpShueoH"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# define the model\n",
-        "class Encoder(nn.Module):\n",
+        "# Feed forward block (sublayer)\n",
+        "class FeedForwardBlock(nn.Module):\n",
         "    def __init__(self, dmodel):\n",
-        "        super(Encoder, self).__init__()\n",
-        "        # Define the attention layer\n",
-        "        self.mhAtt = nn.MultiheadAttention(dmodel, 8)\n",
+        "        super(FeedForwardBlock, self).__init__()\n",
         "        # Define the feed forward network layers\n",
         "        self.fc1 = nn.Linear(dmodel, dmodel)\n",
         "        self.fc2 = nn.Linear(dmodel, dmodel)\n",
@@ -120,34 +118,72 @@
         "        self.relu = nn.ReLU(inplace=True) # inplace = True to save memory\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # todo: do I need to call softmax on mhAtt? (or is it already included in the operation?)\n",
-        "        out = self.mhAtt(x)\n",
-        "        out = self.dropout(out)\n",
+        "        x = self.fc1(x)\n",
+        "        x = self.relu(x)\n",
+        "        x = self.fc2(x)\n",
+        "        x = self.dropout(x)\n",
+        "\n",
+        "        return x\n",
+        "\n",
+        "# Multihead Attention block (Sublayer)\n",
+        "class MultiheadAttentionBlock(nn.Module):\n",
+        "    def __init__(self, dmodel, mask=False):\n",
+        "        super(MultiheadAttentionBlock, self).__init__()\n",
+        "        self.mhAtt = nn.MultiheadAttention(dmodel, 8)\n",
+        "        self.dropout = nn.Dropout(0.1)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.mhAtt(x)\n",
+        "        x = self.dropout(x)\n",
+        "\n",
+        "        return x\n"
+      ],
+      "metadata": {
+        "id": "JTQMPKDFmvcv"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define the encoder model\n",
+        "class Encoder(nn.Module):\n",
+        "    def __init__(self, dmodel):\n",
+        "        super(Encoder, self).__init__()\n",
+        "        # Define the attention layer\n",
+        "        self.mhaBlock = MultiheadAttentionBlock(dmodel)\n",
+        "        self.ff = FeedForwardBlock(dmodel)\n",
+        "\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Multi Head Attention Sublayer()\n",
+        "        out = self.mhaBlock(x)\n",
         "        out += x # residual connection\n",
-        "        # todo: normalize\n",
-        "        out2 = self.fc1(out)\n",
-        "        out2 = self.relu(out2)\n",
-        "        out2 = self.fc2(out2)\n",
-        "        out2 = self.dropout(out2)\n",
+        "        out = self.norm(out) # normalization\n",
+        "\n",
+        "        # Feed Forward Sublayer()\n",
+        "        out2 = self.ff(out)\n",
         "        out2 += out # residual connection\n",
-        "        # todo: normalize\n",
+        "        out2 = self.norm(out2) # normalization\n",
         "\n",
         "        return out2\n"
       ],
       "metadata": {
         "id": "FMab9ODTvWl3"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "class TransformerNet(nn.Module):\n",
-        "    def __init__(self, input_size, hidden_size, num_classes):\n",
+        "    def __init__(self, dmodel):\n",
         "        super(TransformerNet, self).__init__()\n",
-        "        # Define the first fully connected layer\n",
-        "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+        "        # Define all of the stuff needed for the Decoder network\n",
+        "        # todo: masked? How to do that? leave for v2?\n",
+        "        self.mhAtt = nn.MultiheadAttention(dmodel, 8)\n",
         "        # Define the second fully connected layer\n",
         "        self.fc2 = nn.Linear(hidden_size, num_classes)\n",
         "\n",
@@ -160,6 +196,15 @@
       ],
       "metadata": {
         "id": "kD5XyaSNvYJA"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "B71KwbwCjBGY"
       },
       "execution_count": null,
       "outputs": []
