push the latest

--- a/attention_is_all_you_need.ipynb
+++ b/attention_is_all_you_need.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMItKTlIWZgURrBHmH4jRxd",
+      "authorship_tag": "ABX9TyOgK1ZfF6VG8Hiyfz7LhkED",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,9 +148,9 @@
       "cell_type": "code",
       "source": [
         "# define the encoder model\n",
-        "class Encoder(nn.Module):\n",
+        "class EncoderLayer(nn.Module):\n",
         "    def __init__(self, dmodel):\n",
-        "        super(Encoder, self).__init__()\n",
+        "        super(EncoderLayer, self).__init__()\n",
         "        # Define the attention layer\n",
         "        self.mhaBlock = MultiheadAttentionBlock(dmodel)\n",
         "        self.ff = FeedForwardBlock(dmodel)\n",
@@ -172,20 +172,54 @@
       "metadata": {
         "id": "FMab9ODTvWl3"
       },
-      "execution_count": 13,
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Decoder Layer\n",
+        "\n",
+        "# This is all wrong I think. We need to feed the output embedding into this block. How do we do that?\n",
+        "class DecoderLayer(nn.Module):\n",
+        "    def __init__(self, dmodel):\n",
+        "        super(DecoderLayer, self).__init__()\n",
+        "        self.encoder = EncoderLayer(dmodel)\n",
+        "        self.mhaBlock1 = MultiheadAttentionBlock(dmodel, mask=True)\n",
+        "        self.ffBlock = FeedForwardBlock(dmodel)\n",
+        "        self.mhaBlock2 = MultiheadAttentionBlock(dmodel)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # todo: concatenate w/ input positional encoding (why do that?)\n",
+        "        # Encoder layer\n",
+        "        encoded = self.encoder(x)\n",
+        "        # Multi Head Attention Sublayer 1 (masked)\n",
+        "        pos_encoded = encoded # todo: concatenate w/ positional encoding\n",
+        "        decoded = self.mhaBlock1(pos_encoded)\n",
+        "        decoded += pos_encoded # residual connection\n",
+        "        decoded = self.norm(decoded) # normalization\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tOgcM8S-rUp3"
+      },
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "class TransformerNet(nn.Module):\n",
-        "    def __init__(self, dmodel):\n",
+        "    # numLayers = 6 by default to mimic the parameters of the paper\n",
+        "    def __init__(self, dmodel, numLayers = 6):\n",
         "        super(TransformerNet, self).__init__()\n",
-        "        # Define all of the stuff needed for the Decoder network\n",
-        "        # todo: masked? How to do that? leave for v2?\n",
-        "        self.mhAtt = nn.MultiheadAttention(dmodel, 8)\n",
-        "        # Define the second fully connected layer\n",
-        "        self.fc2 = nn.Linear(hidden_size, num_classes)\n",
+        "        # todo: define the positional encoding stuff?\n",
+        "\n",
+        "        # Variable sized number of encoder/decoder layers\n",
+        "        self.layers = nn.ModuleList()\n",
+        "\n",
+        "        for _ in range(numLayers):\n",
+        "            self.layers.append()\n",
         "\n",
         "    def forward(self, x):\n",
         "        # Apply a ReLU non-linearity to the first layer's output\n",
